# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "count_tracker"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "Tilak Dave <davetilak003@gmail.com>" ]
description = "This smart contract maintains count of all the transactions happend on my dApp."

[dependencies]
concordium-std = "5.1"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
